Bug 356428 - Plasmashell crash when minimizing app and then hovering mouse over taskmanager
Summary: Plasmashell crash when minimizing app and then hovering mouse over taskmanager
Status: RESOLVED FIXED
Alias: None
Product: libplasma
Classification: Frameworks and Libraries
Component: libplasmaquick (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: Marco Martin
URL:
Keywords: drkonqi
: 356596 356900 357209 357530 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-12-09 14:27 UTC by Mike
Modified: 2016-01-04 17:12 UTC (History)
9 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mike 2015-12-09 14:27:09 UTC
Application: plasmashell (5.5.0)

Qt Version: 5.5.1
Operating System: Linux 4.3.0-2-default x86_64
Distribution: "openSUSE Tumbleweed (20151124) (x86_64)"

-- Information about the crash:
- What I was doing when the application crashed:

I minimized and app, then hovered the mouse over a launcher on the task manager.  Only seems to happen "randomly" and it doesn't seem to matter what app gets minimized.

The crash can be reproduced sometimes.

-- Backtrace:
Application: Plasma (plasmashell), signal: Segmentation fault
Using host libthread_db library "/lib64/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f56651ea8c0 (LWP 13402))]

Thread 7 (Thread 0x7f564e753700 (LWP 13405)):
#0  0x00007f565e78d20d in poll () at /lib64/libc.so.6
#1  0x00007f566364a432 in  () at /usr/lib64/libxcb.so.1
#2  0x00007f566364c007 in xcb_wait_for_event () at /usr/lib64/libxcb.so.1
#3  0x00007f56508a6e29 in  () at /usr/lib64/libQt5XcbQpa.so.5
#4  0x00007f565ee7e94f in  () at /usr/lib64/libQt5Core.so.5
#5  0x00007f565df944a4 in start_thread () at /lib64/libpthread.so.0
#6  0x00007f565e795b9d in clone () at /lib64/libc.so.6

Thread 6 (Thread 0x7f564b8b7700 (LWP 13417)):
#0  0x00007f565e78d20d in poll () at /lib64/libc.so.6
#1  0x00007f565ae84264 in  () at /usr/lib64/libglib-2.0.so.0
#2  0x00007f565ae8436c in g_main_context_iteration () at /usr/lib64/libglib-2.0.so.0
#3  0x00007f565f0a352b in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQt5Core.so.5
#4  0x00007f565f04d63a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQt5Core.so.5
#5  0x00007f565ee79b1c in QThread::exec() () at /usr/lib64/libQt5Core.so.5
#6  0x00007f56621259a5 in  () at /usr/lib64/libQt5Qml.so.5
#7  0x00007f565ee7e94f in  () at /usr/lib64/libQt5Core.so.5
#8  0x00007f565df944a4 in start_thread () at /lib64/libpthread.so.0
#9  0x00007f565e795b9d in clone () at /lib64/libc.so.6

Thread 5 (Thread 0x7f5641dcb700 (LWP 13419)):
#0  0x00007f565df9a07f in pthread_cond_wait@@GLIBC_2.3.2 () at /lib64/libpthread.so.0
#1  0x00007f5648852d5a in  () at /usr/lib64/dri/r600_dri.so
#2  0x00007f5648852587 in  () at /usr/lib64/dri/r600_dri.so
#3  0x00007f565df944a4 in start_thread () at /lib64/libpthread.so.0
#4  0x00007f565e795b9d in clone () at /lib64/libc.so.6

Thread 4 (Thread 0x7f563be62700 (LWP 13420)):
#0  0x00007f565e78d20d in poll () at /lib64/libc.so.6
#1  0x00007f565ae84264 in  () at /usr/lib64/libglib-2.0.so.0
#2  0x00007f565ae8436c in g_main_context_iteration () at /usr/lib64/libglib-2.0.so.0
#3  0x00007f565f0a352b in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQt5Core.so.5
#4  0x00007f565f04d63a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQt5Core.so.5
#5  0x00007f565ee79b1c in QThread::exec() () at /usr/lib64/libQt5Core.so.5
#6  0x00007f56621259a5 in  () at /usr/lib64/libQt5Qml.so.5
#7  0x00007f565ee7e94f in  () at /usr/lib64/libQt5Core.so.5
#8  0x00007f565df944a4 in start_thread () at /lib64/libpthread.so.0
#9  0x00007f565e795b9d in clone () at /lib64/libc.so.6

Thread 3 (Thread 0x7f563a60a700 (LWP 13421)):
#0  0x00007f565e78d20d in poll () at /lib64/libc.so.6
#1  0x00007f565ae84264 in  () at /usr/lib64/libglib-2.0.so.0
#2  0x00007f565ae8436c in g_main_context_iteration () at /usr/lib64/libglib-2.0.so.0
#3  0x00007f565f0a352b in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQt5Core.so.5
#4  0x00007f565f04d63a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQt5Core.so.5
#5  0x00007f565ee79b1c in QThread::exec() () at /usr/lib64/libQt5Core.so.5
#6  0x00007f56621259a5 in  () at /usr/lib64/libQt5Qml.so.5
#7  0x00007f565ee7e94f in  () at /usr/lib64/libQt5Core.so.5
#8  0x00007f565df944a4 in start_thread () at /lib64/libpthread.so.0
#9  0x00007f565e795b9d in clone () at /lib64/libc.so.6

Thread 2 (Thread 0x7f5638c8a700 (LWP 13424)):
#0  0x00007f565df9a07f in pthread_cond_wait@@GLIBC_2.3.2 () at /lib64/libpthread.so.0
#1  0x00007f56648d6a84 in  () at /usr/lib64/libQt5Script.so.5
#2  0x00007f56648d6ac9 in  () at /usr/lib64/libQt5Script.so.5
#3  0x00007f565df944a4 in start_thread () at /lib64/libpthread.so.0
#4  0x00007f565e795b9d in clone () at /lib64/libc.so.6

Thread 1 (Thread 0x7f56651ea8c0 (LWP 13402)):
[KCrash Handler]
#6  0x00007f56633c4791 in Plasma::Applet::pluginInfo() const () at /usr/lib64/libKF5Plasma.so.5
#7  0x000000000045c9ed in ShellCorona::executeSetupPlasmoidScript(Plasma::Containment*, Plasma::Applet*) ()
#8  0x00007f565f07ce17 in QMetaObject::activate(QObject*, int, int, void**) () at /usr/lib64/libQt5Core.so.5
#9  0x00007f56633c7cf2 in Plasma::Containment::appletCreated(Plasma::Applet*) () at /usr/lib64/libKF5Plasma.so.5
#10 0x00007f56633c8202 in Plasma::Containment::createApplet(QString const&, QList<QVariant> const&) () at /usr/lib64/libKF5Plasma.so.5
#11 0x00007f563a6234f8 in  () at /usr/lib64/qt5/plugins/plasma/scriptengines/plasma_appletscript_declarative.so
#12 0x00007f563a62b0a9 in  () at /usr/lib64/qt5/plugins/plasma/scriptengines/plasma_appletscript_declarative.so
#13 0x00007f563a62c580 in  () at /usr/lib64/qt5/plugins/plasma/scriptengines/plasma_appletscript_declarative.so
#14 0x00007f565f05ac8a in QMetaMethod::invoke(QObject*, Qt::ConnectionType, QGenericReturnArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument) const () at /usr/lib64/libQt5Core.so.5
#15 0x00007f565f06004d in QMetaObject::invokeMethod(QObject*, char const*, Qt::ConnectionType, QGenericReturnArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument) () at /usr/lib64/libQt5Core.so.5
#16 0x00007f5639304b70 in  () at /usr/lib64/qt5/plugins/plasma_containmentactions_paste.so
#17 0x00007f565f07ce17 in QMetaObject::activate(QObject*, int, int, void**) () at /usr/lib64/libQt5Core.so.5
#18 0x00007f56603bc3f2 in QAction::triggered(bool) () at /usr/lib64/libQt5Widgets.so.5
#19 0x00007f56603be648 in QAction::activate(QAction::ActionEvent) () at /usr/lib64/libQt5Widgets.so.5
#20 0x00007f563a62cfdf in  () at /usr/lib64/qt5/plugins/plasma/scriptengines/plasma_appletscript_declarative.so
#21 0x00007f5662d3494e in QQuickItem::event(QEvent*) () at /usr/lib64/libQt5Quick.so.5
#22 0x00007f563a620276 in  () at /usr/lib64/qt5/plugins/plasma/scriptengines/plasma_appletscript_declarative.so
#23 0x00007f56603c58cc in QApplicationPrivate::notify_helper(QObject*, QEvent*) () at /usr/lib64/libQt5Widgets.so.5
#24 0x00007f56603ca9d6 in QApplication::notify(QObject*, QEvent*) () at /usr/lib64/libQt5Widgets.so.5
#25 0x00007f565f04fcf3 in QCoreApplication::notifyInternal(QObject*, QEvent*) () at /usr/lib64/libQt5Core.so.5
#26 0x00007f5662d43143 in QQuickWindow::sendEvent(QQuickItem*, QEvent*) () at /usr/lib64/libQt5Quick.so.5
#27 0x00007f5662d433e4 in QQuickWindowPrivate::deliverInitialMousePressEvent(QQuickItem*, QMouseEvent*) () at /usr/lib64/libQt5Quick.so.5
#28 0x00007f5662d4332d in QQuickWindowPrivate::deliverInitialMousePressEvent(QQuickItem*, QMouseEvent*) () at /usr/lib64/libQt5Quick.so.5
#29 0x00007f5662d4332d in QQuickWindowPrivate::deliverInitialMousePressEvent(QQuickItem*, QMouseEvent*) () at /usr/lib64/libQt5Quick.so.5
#30 0x00007f5662d4354f in QQuickWindowPrivate::deliverMouseEvent(QMouseEvent*) () at /usr/lib64/libQt5Quick.so.5
#31 0x00007f5662d43742 in QQuickWindow::mousePressEvent(QMouseEvent*) () at /usr/lib64/libQt5Quick.so.5
#32 0x00007f565f59bc3b in QWindow::event(QEvent*) () at /usr/lib64/libQt5Gui.so.5
#33 0x00007f5662d4a621 in QQuickWindow::event(QEvent*) () at /usr/lib64/libQt5Quick.so.5
#34 0x00000000004422b6 in DesktopView::event(QEvent*) ()
#35 0x00007f56603c58cc in QApplicationPrivate::notify_helper(QObject*, QEvent*) () at /usr/lib64/libQt5Widgets.so.5
#36 0x00007f56603ca9d6 in QApplication::notify(QObject*, QEvent*) () at /usr/lib64/libQt5Widgets.so.5
#37 0x00007f565f04fcf3 in QCoreApplication::notifyInternal(QObject*, QEvent*) () at /usr/lib64/libQt5Core.so.5
#38 0x00007f565f59379e in QGuiApplicationPrivate::processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent*) () at /usr/lib64/libQt5Gui.so.5
#39 0x00007f565f595305 in QGuiApplicationPrivate::processWindowSystemEvent(QWindowSystemInterfacePrivate::WindowSystemEvent*) () at /usr/lib64/libQt5Gui.so.5
#40 0x00007f565f57a9f8 in QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQt5Gui.so.5
#41 0x00007f56508d6ed0 in  () at /usr/lib64/libQt5XcbQpa.so.5
#42 0x00007f565ae84097 in g_main_context_dispatch () at /usr/lib64/libglib-2.0.so.0
#43 0x00007f565ae842c8 in  () at /usr/lib64/libglib-2.0.so.0
#44 0x00007f565ae8436c in g_main_context_iteration () at /usr/lib64/libglib-2.0.so.0
#45 0x00007f565f0a350f in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQt5Core.so.5
#46 0x00007f565f04d63a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQt5Core.so.5
#47 0x00007f565f0552fd in QCoreApplication::exec() () at /usr/lib64/libQt5Core.so.5
#48 0x0000000000436571 in main ()

Reported using DrKonqi
Comment 1 David Edmundson 2015-12-13 17:15:01 UTC
*** Bug 356596 has been marked as a duplicate of this bug. ***
Comment 2 Martin Klapetek 2015-12-14 23:31:42 UTC
Thanks for the report

Could you please install debug package for libKF5Plasma and then
post an updated backtrace? Would help with pinpointing this bug.
If you get the updated backtrace, it's enough if you copy-paste just
the "Thread 1" or whichever has the "[KCrash Handler]" in it.

Thanks
Comment 3 Mike 2015-12-15 16:11:35 UTC
Is it perhaps, another name?  I am on openSUSE TW using the KF5 Factory Repo and I don't see an explicit debug pkg called "libKF5Plasma".
Comment 4 Martin Klapetek 2015-12-15 16:38:27 UTC
Ok apparently the package name is plasma5-framework-debuginfo
Comment 5 Mike 2015-12-16 00:31:32 UTC
Actually, plasma-framework-debuginfo, at least on TW.  Anyway, there is the copy/paste from the backtrace from the latest crash:

[code]Thread 1 (Thread 0x7fb0d56648c0 (LWP 1637)):
[KCrash Handler]
#6  0x00007fb0d383ac11 in Plasma::Applet::pluginInfo() const (this=0x0) at /usr/src/debug/plasma-framework-5.17.0/src/plasma/applet.cpp:354
#7  0x000000000045c7cd in ShellCorona::executeSetupPlasmoidScript(Plasma::Containment*, Plasma::Applet*) ()
#8  0x00007fb0cf4dee17 in QMetaObject::activate(QObject*, int, int, void**) () at /usr/lib64/libQt5Core.so.5
#9  0x00007fb0d383e052 in Plasma::Containment::appletCreated(Plasma::Applet*) (this=this@entry=0x2178080, _t1=_t1@entry=0x0) at /usr/src/debug/plasma-framework-5.17.0/build/src/plasma/moc_containment.cpp:413
#10 0x00007fb0d383e562 in Plasma::Containment::createApplet(QString const&, QList<QVariant> const&) (this=0x2178080, name=..., args=...) at /usr/src/debug/plasma-framework-5.17.0/src/plasma/containment.cpp:366
#11 0x00007fb0aaa938f8 in  () at /usr/lib64/qt5/plugins/plasma/scriptengines/plasma_appletscript_declarative.so
#12 0x00007fb0aaa9bce9 in  () at /usr/lib64/qt5/plugins/plasma/scriptengines/plasma_appletscript_declarative.so
#13 0x00007fb0aaa9d4c8 in  () at /usr/lib64/qt5/plugins/plasma/scriptengines/plasma_appletscript_declarative.so
#14 0x00007fb0cf4bcc8a in QMetaMethod::invoke(QObject*, Qt::ConnectionType, QGenericReturnArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument) const () at /usr/lib64/libQt5Core.so.5
#15 0x00007fb0cf4c204d in QMetaObject::invokeMethod(QObject*, char const*, Qt::ConnectionType, QGenericReturnArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument) () at /usr/lib64/libQt5Core.so.5
#16 0x00007fb0a9774b70 in  () at /usr/lib64/qt5/plugins/plasma_containmentactions_paste.so
#17 0x00007fb0cf4dee17 in QMetaObject::activate(QObject*, int, int, void**) () at /usr/lib64/libQt5Core.so.5
#18 0x00007fb0d081f3f2 in QAction::triggered(bool) () at /usr/lib64/libQt5Widgets.so.5
#19 0x00007fb0d0821648 in QAction::activate(QAction::ActionEvent) () at /usr/lib64/libQt5Widgets.so.5
#20 0x00007fb0aaa9dd4f in  () at /usr/lib64/qt5/plugins/plasma/scriptengines/plasma_appletscript_declarative.so
#21 0x00007fb0d31ba94e in QQuickItem::event(QEvent*) () at /usr/lib64/libQt5Quick.so.5
#22 0x00007fb0aaa90676 in  () at /usr/lib64/qt5/plugins/plasma/scriptengines/plasma_appletscript_declarative.so
#23 0x00007fb0d08288cc in QApplicationPrivate::notify_helper(QObject*, QEvent*) () at /usr/lib64/libQt5Widgets.so.5
#24 0x00007fb0d082d9d6 in QApplication::notify(QObject*, QEvent*) () at /usr/lib64/libQt5Widgets.so.5
#25 0x00007fb0cf4b1cf3 in QCoreApplication::notifyInternal(QObject*, QEvent*) () at /usr/lib64/libQt5Core.so.5
#26 0x00007fb0d31c9143 in QQuickWindow::sendEvent(QQuickItem*, QEvent*) () at /usr/lib64/libQt5Quick.so.5
#27 0x00007fb0d31c93e4 in QQuickWindowPrivate::deliverInitialMousePressEvent(QQuickItem*, QMouseEvent*) () at /usr/lib64/libQt5Quick.so.5
#28 0x00007fb0d31c932d in QQuickWindowPrivate::deliverInitialMousePressEvent(QQuickItem*, QMouseEvent*) () at /usr/lib64/libQt5Quick.so.5
#29 0x00007fb0d31c932d in QQuickWindowPrivate::deliverInitialMousePressEvent(QQuickItem*, QMouseEvent*) () at /usr/lib64/libQt5Quick.so.5
#30 0x00007fb0d31c954f in QQuickWindowPrivate::deliverMouseEvent(QMouseEvent*) () at /usr/lib64/libQt5Quick.so.5
#31 0x00007fb0d31c9742 in QQuickWindow::mousePressEvent(QMouseEvent*) () at /usr/lib64/libQt5Quick.so.5
#32 0x00007fb0cf9fdc3b in QWindow::event(QEvent*) () at /usr/lib64/libQt5Gui.so.5
#33 0x00007fb0d31d0621 in QQuickWindow::event(QEvent*) () at /usr/lib64/libQt5Quick.so.5
#34 0x00000000004422b6 in DesktopView::event(QEvent*) ()
#35 0x00007fb0d08288cc in QApplicationPrivate::notify_helper(QObject*, QEvent*) () at /usr/lib64/libQt5Widgets.so.5
#36 0x00007fb0d082d9d6 in QApplication::notify(QObject*, QEvent*) () at /usr/lib64/libQt5Widgets.so.5
#37 0x00007fb0cf4b1cf3 in QCoreApplication::notifyInternal(QObject*, QEvent*) () at /usr/lib64/libQt5Core.so.5
#38 0x00007fb0cf9f579e in QGuiApplicationPrivate::processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent*) () at /usr/lib64/libQt5Gui.so.5
#39 0x00007fb0cf9f7305 in QGuiApplicationPrivate::processWindowSystemEvent(QWindowSystemInterfacePrivate::WindowSystemEvent*) () at /usr/lib64/libQt5Gui.so.5
#40 0x00007fb0cf9dc9f8 in QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQt5Gui.so.5
#41 0x00007fb0c0d27ed0 in  () at /usr/lib64/libQt5XcbQpa.so.5
#42 0x00007fb0cb2e4097 in g_main_context_dispatch () at /usr/lib64/libglib-2.0.so.0
#43 0x00007fb0cb2e42c8 in  () at /usr/lib64/libglib-2.0.so.0
#44 0x00007fb0cb2e436c in g_main_context_iteration () at /usr/lib64/libglib-2.0.so.0
#45 0x00007fb0cf50550f in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQt5Core.so.5
#46 0x00007fb0cf4af63a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQt5Core.so.5
#47 0x00007fb0cf4b72fd in QCoreApplication::exec() () at /usr/lib64/libQt5Core.so.5
#48 0x0000000000436571 in main ()
[/code]
Comment 6 Kai Uwe Broulik 2015-12-16 08:06:39 UTC
Thanks. For some reason it's trying to create an applet whose Plugin info is invalid.
Comment 7 AnAkkk 2015-12-19 15:25:44 UTC
I have the same issue, it's happening all the time when I am in a fullscreen app (CS GO), minimize it, and put my mouse over the taskbar. This is very annoying.
Comment 8 David Edmundson 2015-12-20 20:46:44 UTC
*** Bug 356900 has been marked as a duplicate of this bug. ***
Comment 9 David Rosca 2015-12-21 14:01:21 UTC
Git commit bca8e87531a3cc964b415755f50abebecef68a86 by David Rosca.
Committed on 21/12/2015 at 14:00.
Pushed by drosca into branch 'master'.

Containment: Don't emit appletCreated with null applet

ContainmentPrivate::createApplet may return null pointer
(eg. when desktop is immutable), so check the pointer before
emitting appletCreated.

REVIEW: 126449

M  +3    -1    src/plasma/containment.cpp

http://commits.kde.org/plasma-framework/bca8e87531a3cc964b415755f50abebecef68a86
Comment 10 Kai Uwe Broulik 2015-12-27 13:03:18 UTC
*** Bug 357209 has been marked as a duplicate of this bug. ***
Comment 11 David Edmundson 2016-01-04 17:12:38 UTC
*** Bug 357530 has been marked as a duplicate of this bug. ***